--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "contact-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://localhost:3000/contact",
+  "homepage": "https://ajay1800.github.io/contact",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.7",
