--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "contact-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ajay1800.github.io/contact",
+  "homepage": "http://ajay1800.github.io/contact",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.7",
@@ -25,11 +25,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
